--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "start:windows": "set NODE_ENV=production && node server/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
+    "express": "^4.18.2",
+    "lucide-react": "^0.314.0",
+    "node-cron": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "date-fns": "^3.3.1",
-    "lucide-react": "^0.314.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "node-cron": "^3.0.3"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
